--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 
-    ext.kotlin_version = "1.4.10"
+    ext {
+        kotlin_version = "1.7.10"
+        coreVersion = "1.9.0"
+        materialVersion = "1.6.1"
+        appCompatVersion = "1.5.1"
+        constrainLayoutVersion = "2.1.4"
+
+        junitVersion = "4.13.2"
+        junitExtVersion = "1.1.3"
+        espressoCoreVersion = "3.4.0"
+    }
+
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
     }
+
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0-rc03"
+        classpath 'com.android.tools.build:gradle:7.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,7 +32,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
