--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,10 +7,10 @@ android {
     compileSdkVersion 33
 
     defaultConfig {
-        applicationId "com.saka.android.imagepicker"
+        applicationId "com.saka.android.imagepickerdemo"
         minSdkVersion 21
         targetSdkVersion 33
-        versionCode 1
+        versionCode 2
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -29,7 +29,10 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
-    namespace "com.saka.android.imagepicker"
+    lint {
+        abortOnError false
+    }
+    namespace "com.saka.android.imagepickerdemo"
 }
 
 dependencies {
